--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "firebase": "^10.13.0",
     "framer-motion": "^11.3.30",
     "leetcode-query": "^1.2.3",
+    "moment": "^2.30.1",
     "progressbar.js": "^1.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
@@ -40,6 +45,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.1",
     "react-timeline": "^0.0.9",
+    "react-toastify": "^10.0.5",
     "react-vertical-timeline-component": "^3.6.0",
     "redux-toolkit": "^1.1.2",
     "styled-components": "^6.1.12",
